# Switcheroo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
exploit/: index.html  jailbreak.js  logger.js  style.css
